# smap

./: CMakeLists.txt  README.md
smap/: CMakeLists.txt
smap/src/: main.c  smap.c  smap.h
tests/: CMakeLists.txt  smap.test.cpp
